fixup reqs, paths

--- a/nim.cfg
+++ b/nim.cfg
@@ -3,6 +3,8 @@ hint[Processing]=off
 --nimblePath="deps/pkgs"
 --outdir="."
 --path="src"
+--path="deps/pkgs/npeg-#head/src"
+--path="deps/pkgs/parsetoml-#head/src"
 --define:ssl
 --define:git2SetVer:"0.28.3"
 --define:git2DL
