--- a/nim.cfg
+++ b/nim.cfg
@@ -1,10 +1,11 @@
+hint[Conf]=off
 hint[Processing]=off
 --clearNimblePath
 --nimblePath="deps/pkgs"
 --outdir="."
 --path="src"
 --path="deps/pkgs/npeg-#head/src"
---path="deps/pkgs/parsetoml-#head/src"
+--path="deps/pkgs/parsetoml-#v0.5.0/src"
 --define:ssl
 --define:git2SetVer:"0.28.3"
 --define:git2DL
