--- a/nim.cfg
+++ b/nim.cfg
@@ -5,6 +5,9 @@ hint[Processing]=off
 --outdir="."
 --path="src"
 --path="deps/pkgs/npeg-#head/src"
+--path="deps/pkgs/regex-#v0.13.0/src"
+--path="deps/pkgs/unicodedb-#head/src"
+--path="deps/pkgs/unicodeplus-#v0.5.1/src"
 --path="deps/pkgs/parsetoml-#v0.5.0/src"
 --define:ssl
 --define:git2SetVer:"0.28.3"
