move some stuff around for testing

--- a/nim.cfg
+++ b/nim.cfg
@@ -5,10 +5,14 @@ hint[Processing]=off
 --outdir="."
 --path="src"
 --path="deps/pkgs/npeg-#head/src"
---path="deps/pkgs/regex-0.13.0/src"
---path="deps/pkgs/unicodedb-0.7.2/src"
---path="deps/pkgs/unicodeplus-0.5.1/src"
+--path="deps/pkgs/regex-#v0.13.0/src"
+--path="deps/pkgs/unicodeplus-#v0.5.1/src"
+--path="deps/pkgs/unicodedb-#head/src"
 --path="deps/pkgs/parsetoml-#v0.5.0/src"
+--path="$home/.nimble/pkgs/compiler-1.1.1"
+--path="$home/.nimble/pkgs/nimterop-0.3.3"
+--path="$home/.nimble/pkgs/nimterop-#head"
+--path="$home/.nimble/pkgs/nimgit2-0.1.0"
 --define:ssl
 --define:git2SetVer:"0.28.3"
 --define:git2DL
