handle hierarchical paths naturally

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,14 +1,14 @@
-hint[Conf]=off
+#hint[Conf]=off
 hint[Processing]=off
 --clearNimblePath
---nimblePath="deps/pkgs"
+--nimblePath="$config/deps/pkgs"
 --outdir="."
---path="src"
---path="deps/pkgs/npeg-#head/src"
---path="deps/pkgs/regex-#v0.13.0/src"
---path="deps/pkgs/unicodeplus-#v0.5.1/src"
---path="deps/pkgs/unicodedb-#head/src"
---path="deps/pkgs/parsetoml-#v0.5.0/src"
+--path="$config/src"
+--path="$config/deps/pkgs/npeg-#head/src"
+--path="$config/deps/pkgs/regex-#v0.13.0/src"
+--path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
+--path="$config/deps/pkgs/unicodedb-#head/src"
+--path="$config/deps/pkgs/parsetoml-#v0.5.0/src"
 --path="$home/.nimble/pkgs/compiler-1.1.1"
 --path="$home/.nimble/pkgs/nimterop-0.3.3"
 --path="$home/.nimble/pkgs/nimterop-#head"
