document nim.cfg a bit

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,20 +1,44 @@
+#--define:debug
 #hint[Conf]=off
 hint[Processing]=off
+
+# github won't work without ssl enabled
+--define:ssl
+
+#--define:npegTrace
+
+# specify our preferred version of libgit2
+--define:git2SetVer:"0.28.3"
+
+# and our preferred method of retrieval
+--define:git2DL
+
+# we're going to specify new dependency directories...
 --clearNimblePath
+
+# first, our local deps
 --nimblePath="$config/deps/pkgs"
+
+# output the nimph binary in the project directory instead of
+# causing a filename clash and naming it src/nimph.out (duh)
 --outdir="."
+
+# allow the source files to import themselves as they might
+# outside the library, a la 'import nimph/spec'
 --path="$config/src"
+
+# we use a nimblePath here so that wherever the compiler is,
+# we can just `nimble develop` and create a link, instead of
+# having to `nimble install compiler` and maintain a separate
+# copy of the compiler library...
+--nimblePath="$home/.nimble/pkgs/compiler-#head"
+--path="$home/.nimble/pkgs/nimterop-0.3.3"
+--path="$home/.nimble/pkgs/nimterop-#head"
+--path="$home/.nimble/pkgs/nimgit2-0.1.0"
+
+# nimph itself will, over time, move stuff to the bottom
 --path="$config/deps/pkgs/npeg-#head/src"
 --path="$config/deps/pkgs/regex-#v0.13.0/src"
 --path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
 --path="$config/deps/pkgs/unicodedb-#head/src"
 --path="$config/deps/pkgs/parsetoml-#v0.5.0/src"
---path="$home/.nimble/pkgs/compiler-1.1.1"
---path="$home/.nimble/pkgs/nimterop-0.3.3"
---path="$home/.nimble/pkgs/nimterop-#head"
---path="$home/.nimble/pkgs/nimgit2-0.1.0"
---define:ssl
---define:git2SetVer:"0.28.3"
---define:git2DL
-#--define:debug
-#--define:npegTrace
