tighten/relax requirements

--- a/nim.cfg
+++ b/nim.cfg
@@ -37,7 +37,7 @@ hint[Processing]=off
 --path="$home/.nimble/pkgs/nimgit2-0.1.0"
 
 # nimph itself will, over time, move stuff to the bottom
---path="$config/deps/pkgs/npeg-#head/src"
+--path="$config/deps/pkgs/npeg-0.21.1/src"
 --path="$config/deps/pkgs/regex-#v0.13.0/src"
 --path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
 --path="$config/deps/pkgs/unicodedb-#head/src"
