stop trying to use local nimterop deps

--- a/nim.cfg
+++ b/nim.cfg
@@ -35,10 +35,10 @@ hint[Processing]=off
 --path="$home/.nimble/pkgs/nimterop-0.3.3"
 --path="$home/.nimble/pkgs/nimterop-#head"
 --path="$home/.nimble/pkgs/nimgit2-0.1.0"
+--path="$home/.nimble/pkgs/regex-#v0.13.0/src"
+--path="$home/.nimble/pkgs/unicodeplus-#v0.5.1/src"
+--path="$home/.nimble/pkgs/unicodedb-#head/src"
 
 # nimph itself will, over time, move stuff to the bottom
 --path="$config/deps/pkgs/npeg-0.21.1/src"
---path="$config/deps/pkgs/regex-#v0.13.0/src"
---path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
---path="$config/deps/pkgs/unicodedb-#head/src"
 --path="$config/deps/pkgs/parsetoml-#v0.5.0/src"
