add search paths with ideal substitutions

--- a/nim.cfg
+++ b/nim.cfg
@@ -34,8 +34,8 @@ hint[Processing]=off
 --nimblePath="$home/.nimble/pkgs/compiler-#head"
 
 # nimph itself will, over time, move stuff to the bottom
---path="$config/deps/pkgs/npeg-0.21.2/src"
 --path="$config/deps/pkgs/parsetoml-#v0.5.0/src"
 --path="$config/deps/pkgs/regex-#v0.13.0/src"
 --path="$config/deps/pkgs/unicodedb-#head/src"
 --path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
+--path="$config/deps/pkgs/npeg-#head/src"
