github path because dumb

--- a/nim.cfg
+++ b/nim.cfg
@@ -39,3 +39,4 @@ hint[Processing]=off
 --path="$config/deps/pkgs/unicodedb-#head/src"
 --path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
 --path="$config/deps/pkgs/npeg-#head/src"
+--path="$config/deps/pkgs/github-1.0.2/src/"
