add a lil more debugging for nimbledir insanity

--- a/nim.cfg
+++ b/nim.cfg
@@ -2,6 +2,9 @@
 #hint[Conf]=off
 hint[Processing]=off
 
+# try it out; it's horrible
+#--define:writeNimbleDirPaths=true
+
 # github won't work without ssl enabled
 --define:ssl
 
