--- a/nim.cfg
+++ b/nim.cfg
@@ -1,4 +1,4 @@
---define:debugPath
+#--define:debugPath
 #hint[Conf]=off
 hint[Processing]=off
 
@@ -19,9 +19,6 @@ hint[Processing]=off
 # we're going to specify new dependency directories...
 --clearNimblePath
 
-# first, our local deps
---nimblePath="$config/deps/pkgs"
-
 # output the nimph binary in the project directory instead of
 # causing a filename clash and naming it src/nimph.out (duh)
 --outdir="."
@@ -34,12 +31,17 @@ hint[Processing]=off
 # we can just `nimble develop` and create a link, instead of
 # having to `nimble install compiler` and maintain a separate
 # copy of the compiler library...
---nimblePath="$home/.nimble/pkgs/compiler-#head"
+--path="$home/git/Nim/"
+
+# lastly, our local deps will show up first
+--nimblePath="$config/deps/pkgs"
 
 # nimph itself will, over time, move stuff to the bottom
---path="$config/deps/pkgs/parsetoml-#v0.5.0/src"
---path="$config/deps/pkgs/regex-#v0.13.0/src"
---path="$config/deps/pkgs/unicodedb-#head/src"
---path="$config/deps/pkgs/unicodeplus-#v0.5.1/src"
---path="$config/deps/pkgs/npeg-#head/src"
+--path="$config/deps/pkgs/parsetoml-#v0.5.0/src/"
+--path="$config/deps/pkgs/npeg-#head/src/"
 --path="$config/deps/pkgs/github-1.0.2/src/"
+--path="$config/deps/pkgs/regex-#v0.13.0/src/"
+--path="$config/deps/pkgs/github-1.0.2/src/"
+--path="$config/deps/pkgs/unicodedb-#head/src/"
+--path="$config/deps/pkgs/unicodeplus-#v0.5.1/src/"
+--path="$config/deps/pkgs/nim-regex-#head/src/"
