--- a/nim.cfg
+++ b/nim.cfg
@@ -2,6 +2,11 @@
 #hint[Conf]=off
 hint[Processing]=off
 
+# toggle these if you like
+#--define:cutelogEmojis
+#--define:cutelogMonochrome
+#--define:cutelogBland
+
 # try it out; it's horrible
 #--define:writeNimbleDirPaths=true
 
@@ -37,10 +42,9 @@ hint[Processing]=off
 --nimblePath="$config/deps/pkgs"
 
 # nimph itself will, over time, move stuff to the bottom
---path="$config/deps/pkgs/parsetoml-#v0.5.0/src/"
---path="$config/deps/pkgs/npeg-#head/src/"
---path="$config/deps/pkgs/github-1.0.2/src/"
---path="$config/deps/pkgs/github-1.0.2/src/"
 --path="$config/deps/pkgs/unicodedb-#head/src/"
 --path="$config/deps/pkgs/unicodeplus-#v0.5.1/src/"
+--path="$config/deps/pkgs/github-1.0.2/src/"
+--path="$config/deps/pkgs/npeg-#head/src/"
+--path="$config/deps/pkgs/parsetoml-#v0.5.0/src/"
 --path="$config/deps/pkgs/regex-#v0.13.0/src/"
