separate path cfg from project cfg

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,32 +1,9 @@
-#--define:debugPath
-#hint[Conf]=off
-hint[Processing]=off
-
-# toggle these if you like
-#--define:cutelogEmojis
-#--define:cutelogMonochrome
-#--define:cutelogBland
-
-# try it out; it's horrible
-#--define:writeNimbleDirPaths=true
-
-# github won't work without ssl enabled
---define:ssl
-
-#--define:npegTrace
-
-# specify our preferred version of libgit2
---define:git2SetVer:"0.28.3"
-
-# and our preferred method of retrieval
---define:git2DL
+# this configuration file will just hold path settings in it;
+# see the src/nimph.nim.cfg for compilation settings and constant
+# overrides
 
 # we're going to specify new dependency directories...
 --clearNimblePath
-
-# output the nimph binary in the project directory instead of
-# causing a filename clash and naming it src/nimph.out (duh)
---outdir="."
 
 # allow the source files to import themselves as they might
 # outside the library, a la 'import nimph/spec'
