relocate --outdir to fix docgen

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,3 +1,7 @@
+# output the nimph binary in the project directory instead of
+# causing a filename clash and naming it src/nimph.out (duh)
+--outdir="."
+
 # this configuration file will just hold path settings in it;
 # see the src/nimph.nim.cfg for compilation settings and constant
 # overrides
