don't clone the compiler

--- a/nim.cfg
+++ b/nim.cfg
@@ -13,10 +13,7 @@
 # outside the library, a la 'import nimph/spec'
 --path="$config/src"
 
-# we use a nimblePath here so that wherever the compiler is,
-# we can just `nimble develop` and create a link, instead of
-# having to `nimble install compiler` and maintain a separate
-# copy of the compiler library...
+# don't clone the compiler
 --path="$home/git/Nim/"
 
 # lastly, our local deps will show up first
