we need libgit2 HEAD 🙁

--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -10,10 +10,11 @@
 --define:ssl
 
 # specify our preferred version of libgit2
---define:git2SetVer:"0.28.3"
+#--define:git2SetVer:"0.28.3"
+--define:git2SetVer:"master"
 
 # and our preferred method of retrieval
---define:git2DL
+--define:git2Git
 
 hint[Processing]=off
 #--define:npegTrace
