downgrade libgit2 until we can bisect it

--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -10,8 +10,8 @@
 --define:ssl
 
 # specify our preferred version of libgit2
-#--define:git2SetVer:"0.28.3"
---define:git2SetVer:"master"
+#--define:git2SetVer:"v0.28.3"
+--define:git2SetVer:"v0.28.3"
 
 # and our preferred method of retrieval
 --define:git2Git
