another attempt to try to help nimble find nimph

--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -22,5 +22,5 @@ hint[Processing]=off
 # for gratuitous search path debugging
 #--define:debugPath
 
-# fix nimble
-#--nimblePath="$config"
+# fix nimble?
+--path="$config"
