fix tests, add loose version parser

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -1,5 +1,14 @@
 --define:ssl
 --path="../src"
 --d:npegGraph
---d:npegTracing
+--d:npegTrace
 --outdir="tests"
+
+# specify our preferred version of libgit2
+--define:git2SetVer:"master"
+#--define:git2SetVer:"v0.28.3"
+
+# and our preferred method of retrieval
+--define:git2Git
+
+hint[Processing]=off
