--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -1,7 +1,7 @@
 --define:ssl
 --path="../src"
 --d:npegGraph
---d:npegTrace
+#--d:npegTrace
 --outdir="tests"
 
 # specify our preferred version of libgit2
