--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -3,6 +3,9 @@
 #--define:cutelogMonochrome
 #--define:cutelogBland
 
+# not recommended
+#--define:gitErrorsAreFatal
+
 # try it out; it's horrible
 #--define:writeNimbleDirPaths=true
 
