--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -14,6 +14,7 @@
 
 # specify our preferred version of libgit2
 --define:git2SetVer:"master"
+#--define:git2SetVer:"05c1fb8a593c6aeb3869822ccc5cd551ba56d87f"
 #--define:git2SetVer:"v0.28.4"
 
 # and our preferred method of retrieval
