--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -20,7 +20,8 @@
 # and our preferred method of retrieval
 --define:git2Git
 
-hint[Processing]=off
+--hint[Processing]=off
+--hint[Link]=off
 #--define:npegTrace
 
 # for gratuitous search path debugging
