--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -20,6 +20,9 @@
 # and our preferred method of retrieval
 --define:git2Git
 
+# remove dependency on rando nim cache
+#--define:git2Static
+
 --hint[Processing]=off
 --hint[Link]=off
 #--define:npegTrace
