--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -13,11 +13,10 @@
 --define:ssl
 
 # specify our preferred version of libgit2
-#--define:git2SetVer:"master"
---define:git2SetVer:"v1.0.1"
+--define:git2SetVer:"1.0.1"
 
 # and our preferred method of retrieval
---define:git2Git
+--define:git2JBB
 
 # remove dependency on rando nim cache
 #--define:git2Static
