--- a/nimph.nim.cfg
+++ b/nimph.nim.cfg
@@ -13,11 +13,12 @@
 --define:ssl
 
 # specify our preferred version of libgit2
---define:git2SetVer:"v1.0.1"
-
 # and our preferred method of retrieval
-#--define:git2JBB
 --define:git2Git
+--define:git2SetVer:"v1.0.1"
+# here's a valid alternative; note the missing `v` prefix in the version!
+#--define:git2SetVer:"1.0.1"
+#--define:git2JBB
 
 # remove dependency on rando nim cache
 #--define:git2Static
