explain --path options

--- a/nimph.nim.cfg
+++ b/nimph.nim.cfg
@@ -30,8 +30,10 @@
 # for gratuitous search path debugging
 #--define:debugPath
 
-# fix nimble?
+# our requirements will be adjacent to this file
 --path="$config"
+
+# we also need a path to Nim for compiler imports
 --path="$nim"
 
 # put the binaries in their own directory
