--- a/nimph.nim.cfg
+++ b/nimph.nim.cfg
@@ -17,8 +17,11 @@
 --define:git2Git
 --define:git2SetVer:"v1.0.1"
 # here's a valid alternative; note the missing `v` prefix in the version!
-#--define:git2SetVer:"1.0.1"
 #--define:git2JBB
+#--define:git2SetVer:"1.0.1"
+
+# use the system's libgit2
+#--define:git2Std
 
 # remove dependency on rando nim cache
 #--define:git2Static
