--- a/src/nimph.nim.cfg
+++ b/src/nimph.nim.cfg
@@ -16,7 +16,8 @@
 --define:git2SetVer:"1.0.1"
 
 # and our preferred method of retrieval
---define:git2JBB
+#--define:git2JBB
+--define:git2Git
 
 # remove dependency on rando nim cache
 #--define:git2Static
