give nimph an unshallow repo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           mkdir $HOME/.nimble
           cd nimph
+          git fetch --unshallow
           ./bootstrap-nonimble.sh test
           ./nimph refresh
           ./nimph
