--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
           mkdir $HOME/.nimble
           cd nimph
           git fetch --unshallow
+          mv ci-bootstrap.cfg nim.cfg
           ./bootstrap-nonimble.sh test
           ./nimph refresh
           ./nimph
@@ -69,7 +70,10 @@ jobs:
           cd nimph
           branch=${{ github.ref }}
           branch=${branch##*/}
-          nimble install unicodedb@0.7.2 nimterop@0.6.11
+          mv ci-docs.cfg nim.cfg
+          rm -rf deps
+          mkdir deps
+          ./nimph doctor
           nimble doc --project --outdir:docs \
             '--git.url:https://github.com/${{ github.repository }}' \
             '--git.commit:${{ github.sha }}' \
