--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
             '--git.url:https://github.com/${{ github.repository }}' \
             '--git.commit:${{ github.sha }}' \
             "--git.devel:$branch" \
-            nimph.nim
+            src/nimph.nim
           # Ignore failures for older Nim
           cp docs/{the,}index.html || true
 
