--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,9 @@ jobs:
           mkdir deps
           ./nimph doctor || true
           cat nim.cfg
+          pushd deps/pkgs/nimterop-*
+          nim c nimterop/toast.nim
+          popd
           nim doc --project --outdir:docs \
             '--git.url:https://github.com/${{ github.repository }}' \
             '--git.commit:${{ github.sha }}' \
