reverse the order again to try to break osx

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,15 @@ jobs:
           cd nimph
           git fetch --unshallow
           cp ci-bootstrap.cfg nim.cfg
-          ./bootstrap.sh
+          ./bootstrap-nonimble.sh test
           export NIMBLE_DIR=`pwd`/deps
           ./nimph refresh
           ./nimph
           ./nimph doctor || true
           cat nim.cfg
+          rm nimph
           cp ci-bootstrap.cfg nim.cfg
-          ./bootstrap-nonimble.sh test
+          ./bootstrap.sh
           ./nimph
           ./nimph doctor || true
           cat nim.cfg
