--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [version-1-0, version-1-2, version-1-4, devel]
+        branch: [version-1-2, version-1-4, devel]
         target: [linux, macos]
         include:
           - target: linux
@@ -66,6 +66,7 @@ jobs:
           cp ci-bootstrap.cfg nim.cfg
           ./bootstrap.sh
           export NIMBLE_DIR=`pwd`/deps
+          nimble test
           ./nimph
           ./nimph doctor || true
           cat nim.cfg
