--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           cp ci-bootstrap.cfg nim.cfg
           ./bootstrap.sh
           export NIMBLE_DIR=`pwd`/deps
-          nimble test
+          testes
           ./nimph
           ./nimph doctor || true
           cat nim.cfg
