--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [version-1-2, version-1-4, devel]
-        target: [linux, macos]
-        include:
-          - target: linux
-            builder: ubuntu-18.04
-          - target: macos
-            builder: macos-10.15
-          #- target: windows
-          #  builder: windows-2019
-    name: '${{ matrix.target }} (${{ matrix.branch }})'
+        os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
+        nim: ['devel', 'version-1-4', 'version-1-2']
+        #branch: [version-1-2, version-1-4, devel]
+        #target: [linux, macos]
+        #include:
+        #  - target: linux
+        #    builder: ubuntu-18.04
+        #  - target: macos
+        #    builder: macos-10.15
+        #  - target: windows
+        #    builder: windows-2019
+    name: '${{ matrix.os }} (${{ matrix.nim }})'
     runs-on: ${{ matrix.builder }}
     steps:
       - name: Checkout
@@ -48,7 +50,7 @@ jobs:
         uses: alaviss/setup-nim@0.1.1
         with:
           path: nim
-          version: ${{ matrix.branch }}
+          version: ${{ matrix.nim }}
 
       - name: Run tests
         shell: bash
@@ -97,7 +99,7 @@ jobs:
       - name: Publish docs
         if: >
           github.event_name == 'push' && github.ref == 'refs/heads/master' &&
-          matrix.target == 'linux' && matrix.branch == 'devel'
+          matrix.os == 'ubuntu-latest' && matrix.nim == 'devel'
         uses: crazy-max/ghaction-github-pages@v1
         with:
           build_dir: nimph/docs
