--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
+        #os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
+        os: ['macos-latest', 'ubuntu-latest']
         nim: ['devel', 'version-1-4', 'version-1-2']
         #branch: [version-1-2, version-1-4, devel]
         #target: [linux, macos]
