more nimble shenanigans

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,10 @@ jobs:
           rm nimph
           cp ci-bootstrap.cfg nim.cfg
           export NIMBLE_DIR=`pwd`/deps
+          echo "" >> nim.cfg
           echo "--clearNimblePath" >> nim.cfg
           echo "--nimblePath=$NIMBLE_DIR/pkgs" >> nim.cfg
+          cat nim.cfg
           ./bootstrap.sh
           ./nimph
           ./nimph doctor || true
