--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
           cd `./nimph path testes`
           nim c --out:$HOME/testes --define:release testes.nim
           cd -
+          rm `dirname \`which nim\``/../config/config.nims
           $HOME/testes
 
       - name: Build docs
