another CI update to improve testing (#148)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,17 +27,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [version-1-0, version-1-2, version-1-4, devel]
-        target: [linux, macos]
-        include:
-          - target: linux
-            builder: ubuntu-18.04
-          - target: macos
-            builder: macos-10.15
-          #- target: windows
-          #  builder: windows-2019
-    name: '${{ matrix.target }} (${{ matrix.branch }})'
-    runs-on: ${{ matrix.builder }}
+        #os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
+        os: ['macos-latest', 'ubuntu-latest']
+        nim: ['devel', 'version-1-4', 'version-1-2']
+        #branch: [version-1-2, version-1-4, devel]
+        #target: [linux, macos]
+        #include:
+        #  - target: linux
+        #    builder: ubuntu-18.04
+        #  - target: macos
+        #    builder: macos-10.15
+        #  - target: windows
+        #    builder: windows-2019
+    name: '${{ matrix.os }} (${{ matrix.nim }})'
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -48,7 +51,7 @@ jobs:
         uses: alaviss/setup-nim@0.1.1
         with:
           path: nim
-          version: ${{ matrix.branch }}
+          version: ${{ matrix.nim }}
 
       - name: Run tests
         shell: bash
@@ -57,17 +60,26 @@ jobs:
           cd nimph
           git fetch --unshallow
           cp ci-bootstrap.cfg nim.cfg
-          ./bootstrap.sh
-          export NIMBLE_DIR=`pwd`/deps
+          ./bootstrap-nonimble.sh test
           ./nimph refresh
           ./nimph
           ./nimph doctor || true
           cat nim.cfg
+          rm nimph
           cp ci-bootstrap.cfg nim.cfg
-          ./bootstrap-nonimble.sh test
+          export NIMBLE_DIR=`pwd`/deps
+          echo "--clearNimblePath" >> nim.cfg
+          echo "--nimblePath=\"$NIMBLE_DIR/pkgs\"" >> nim.cfg
+          cat nim.cfg
+          ./bootstrap.sh
           ./nimph
           ./nimph doctor || true
           cat nim.cfg
+          cd `./nimph path testes`
+          nim c --out:$HOME/testes --define:release testes.nim
+          cd -
+          rm `dirname \`which nim\``/../config/config.nims || true
+          $HOME/testes
 
       - name: Build docs
         if: ${{ matrix.docs }} == 'true'
@@ -95,7 +107,7 @@ jobs:
       - name: Publish docs
         if: >
           github.event_name == 'push' && github.ref == 'refs/heads/master' &&
-          matrix.target == 'linux' && matrix.branch == 'devel'
+          matrix.os == 'ubuntu-latest' && matrix.nim == 'devel'
         uses: crazy-max/ghaction-github-pages@v1
         with:
           build_dir: nimph/docs
