--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
     - cron: '30 5 * * *'
 
   push:
+    branches:
+      - master
     paths:
       - '**.cfg'
       - '**.nims'
@@ -12,7 +14,10 @@ on:
       - '**.sh'
       - 'tests/**'
       - '.github/workflows/ci.yml'
+
   pull_request:
+    branches:
+      - '*'
     paths:
       - '**.cfg'
       - '**.nims'
@@ -30,15 +35,6 @@ jobs:
         #os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
         os: ['macos-latest', 'ubuntu-latest']
         nim: ['devel', 'version-1-4', 'version-1-2']
-        #branch: [version-1-2, version-1-4, devel]
-        #target: [linux, macos]
-        #include:
-        #  - target: linux
-        #    builder: ubuntu-18.04
-        #  - target: macos
-        #    builder: macos-10.15
-        #  - target: windows
-        #    builder: windows-2019
     name: '${{ matrix.os }} (${{ matrix.nim }})'
     runs-on: ${{ matrix.os }}
     steps:
