--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         shell: bash
         run: |
           cd ci
-          git clone --depth 1 --branch v1.3.0 https://github.com/libgit2/libgit2.git
+          git clone --depth 1 --branch v1.3.0 --quiet https://github.com/libgit2/libgit2.git
           cd libgit2
           mkdir build
           cd build
