--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
       fail-fast: false
       matrix:
         #os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
-        os: ['macos-latest', 'ubuntu-latest']
+        #os: ['macos-latest', 'ubuntu-latest']
+        os: ['ubuntu-latest']
         nim: ['devel', 'version-1-6', 'version-1-4', 'version-1-2']
     name: '${{ matrix.os }} (${{ matrix.nim }})'
     runs-on: ${{ matrix.os }}
