--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,16 @@ jobs:
         #os: ['windows-latest', 'macos-latest', 'ubuntu-latest']
         #os: ['macos-latest', 'ubuntu-latest']
         os: ['ubuntu-latest']
-        nim: ['version-1-6', 'version-1-4', 'version-1-2']
-    name: '${{ matrix.os }} (${{ matrix.nim }})'
+        compiler:
+          - name: nim
+            version: version-1-6
+          - name: nim
+            version: version-1-4
+          - name: nim
+            version: version-1-2
+          - name: nimskull
+            version: '^0.1.0-dev.21077'
+    name: '${{ matrix.os }} (${{ matrix.compiler.name }} ${{ matrix.compiler.version }})'
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -47,11 +55,37 @@ jobs:
           # nimph will scream when this is used
           #filter: tree:0
 
-      - name: Setup Nim
+      - if: matrix.compiler.name == 'nim'
+        name: Setup Nim
         uses: alaviss/setup-nim@0.1.1
         with:
           path: nim
-          version: ${{ matrix.nim }}
+          version: ${{ matrix.compiler.version }}
+
+      - if: matrix.compiler.name == 'nimskull'
+        id: nimskull
+        name: Setup Nimskull
+        uses: alaviss/setup-nimskull@f6e8ade8ac51191024616216e5da0ee968d9da48
+        with:
+          nimskull-version: ${{ matrix.compiler.version }}
+
+      - if: matrix.compiler.name == 'nimskull'
+        name: Fetch nimble's fork for nimskull
+        uses: actions/checkout@v4
+        with:
+          path: nimble
+          repository: alaviss/nimble
+          ref: nimskull
+
+      - if: matrix.compiler.name == 'nimskull'
+        name: Build nimble and add to PATH
+        shell: bash
+        run: |
+          cd nimble
+          nim c -d:release -o:nimble src/nimble.nim
+          cp nimble "$NIMSKULL_BIN/nimble"
+        env:
+          NIMSKULL_BIN: ${{ steps.nimskull.outputs.binPath }}
 
       - name: Fetch libgit2
         uses: actions/checkout@v4
