--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,11 +123,19 @@ jobs:
           echo "remove nim's config.nims...?"
           ls -l `dirname \`which nim\``/../config/
           rm `dirname \`which nim\``/../config/config.nims || true
-          if [ "${{ matrix.os }}" == "macos-latest" ]; then
-            nim c --define:libgit2Lib="$(pwd)/libgit2/build/libgit2.dylib" --passC:"-I$(pwd)/libgit2/include" --define:ssl --define:release --run tests/test.nim
-          else
-            nim c --define:libgit2Lib="$(pwd)/libgit2/build/libgit2.so" --passC:"-I$(pwd)/libgit2/include" --define:ssl --define:release --run tests/test.nim
-          fi
+
+          soExt=
+          case "$RUNNER_OS" in
+          macOS)
+            soExt=dylib
+            ;;
+          Linux)
+            soExt=so
+          esac
+          libgit2Lib=$(pwd)/libgit2/build/libgit2.$soExt
+
+          nim c --define:libgit2Lib="$libgit2Lib" --passC:"-I$(pwd)/libgit2/include" --define:ssl -r tests/test.nim
+          nim c --define:libgit2Lib="$libgit2Lib" --passC:"-I$(pwd)/libgit2/include" --define:ssl --define:release -r tests/test.nim
 
       - name: Build docs
         if: ${{ matrix.docs }} == 'true'
